add some assets

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <script src="./scripts/template.js"></script>
 
 </head>
-<body onload="render()">
+<body onload="render()" >
 
     <header>
-        <h1>bücher-insel.de</h2>
+        <h1>bücher-insel.de <img class="island-icon-header" src="./assets/img/icons/insel.png" alt="insel.png"></h2> 
         <h3>lies dich in den Schlaf</h3>
     </header>
 
@@ -24,7 +24,7 @@
 
         </div>
 
-         
+
     </section>
     
 </body>
