--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="./assets/style/assets.css">
     <script src="script.js"></script>
     <script src="./scripts/template.js"></script>
+    <script src="./scripts/object.js"></script>
 
 </head>
 <body onload="render()" >
 
     <header>
         <h1>bücher-insel.de <img class="island-icon-header" src="./assets/img/icons/insel.png" alt="insel.png"></h2> 
-        <h3>lies dich in den Schlaf</h3>
     </header>
 
     <section class="section-style">
