--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./assets/style/assets.css">
+    <link rel="stylesheet" href="./assets/style/window.css">
+    <link rel="stylesheet" href="./assets/style/scrollbar.css">
     <script src="script.js"></script>
     <script src="./scripts/template.js"></script>
     <script src="./scripts/object.js"></script>
